--- a/doctype.html
+++ b/doctype.html
@@ -227,8 +227,8 @@
     <div class="question" id="qLove2" style="display:none">
       <h2>2. Comment votre histoire doit-elle être racontée ?</h2>
       <div class="options">
-        <div class="option-small" data-value="jeLove">Point de vue d'un partenaire</div>
-        <div class="option-small" data-value="exterieurLove">Point de vue extérieur</div>
+        <div class="option-small" data-value="jeLove">Point de vue d'un partenaire ("J'ai recontré Paul en 2012..."</div>
+        <div class="option-small" data-value="exterieurLove">Point de vue extérieur ("Julie et Marc se sont mariés en 2021...")</div>
       </div>
     </div>
 
