--- a/doctype.html
+++ b/doctype.html
@@ -166,17 +166,31 @@
         <div class="option" data-value="bio">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Biographie">
           <div class="option-title">Biographie</div>
-          <div class="option-desc">Créez votre biographie :<br>• Votre histoire<br>• Pour un proche<br>• À deux voix</div>
+          <div class="option-desc">
+            Créez votre biographie à votre façon :<br><br>
+            • Racontez votre propre histoire<br>
+            • Écrivez pour un proche<br>
+            • Partagez l'écriture avec un proche
+          </div>
         </div>
         <div class="option" data-value="love">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px).png" alt="Histoire d'amour">
           <div class="option-title">Histoire d'amour</div>
-          <div class="option-desc">Votre histoire d’amour :<br>• Récits croisés<br>• Rencontre<br>• Vie commune</div>
+          <div class="option-desc">
+            Créez un livre autour de votre amour :<br><br>
+            • Chaque partenaire raconte<br>
+            • Vous revivez votre rencontre<br>
+            • Vous retracez votre vie commune
+          </div>
         </div>
         <div class="option" data-value="hommage">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px)%20(1).png" alt="Souvenirs partagés">
           <div class="option-title">Souvenirs partagés</div>
-          <div class="option-desc">Un hommage :<br>• Souvenirs communs<br>• Déclaration<br>• Cadeau unique</div>
+           <div class="option-desc">
+            Offrez un livre en cadeau :<br><br>
+            • Témoignez de votre histoire commune<br>
+            • Célébrez sa vie<br>
+            • Offrez un souvenir éternel
         </div>
       </div>
     </div>
