--- a/doctype.html
+++ b/doctype.html
@@ -166,31 +166,17 @@
         <div class="option" data-value="bio">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Biographie">
           <div class="option-title">Biographie</div>
-          <div class="option-desc">
-            Créez votre biographie à votre façon :<br><br>
-            • Racontez votre propre histoire<br>
-            • Écrivez pour un proche<br>
-            • Partagez l'écriture avec un proche
-          </div>
+          <div class="option-desc">Créez votre biographie :<br>• Votre histoire<br>• L'histoire d'un proche<br>• Aidez un proche pour son histoire</div>
         </div>
         <div class="option" data-value="love">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px).png" alt="Histoire d'amour">
           <div class="option-title">Histoire d'amour</div>
-          <div class="option-desc">
-            Créez un livre autour de votre amour :<br><br>
-            • Chaque partenaire raconte<br>
-            • Vous revivez votre rencontre<br>
-            • Vous retracez votre vie commune
-          </div>
+          <div class="option-desc">Votre histoire d’amour :<br>• Récits croisés<br>• Rencontre<br>• Vie commune</div>
         </div>
         <div class="option" data-value="hommage">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px)%20(1).png" alt="Souvenirs partagés">
           <div class="option-title">Souvenirs partagés</div>
-           <div class="option-desc">
-            Offrez un livre en cadeau :<br><br>
-            • Témoignez de votre histoire commune<br>
-            • Célébrez sa vie<br>
-            • Offrez un souvenir éternel
+          <div class="option-desc">Un hommage :<br>• Des souvenirs communs<br>• Une déclaration<br>• Un cadeau unique</div>
         </div>
       </div>
     </div>
@@ -235,8 +221,8 @@
     <div class="question" id="qLove2" style="display:none">
       <h2>2. Comment votre histoire doit-elle être racontée ?</h2>
       <div class="options">
-        <div class="option-small" data-value="jeLove">Point de vue d'un partenaire</div>
-        <div class="option-small" data-value="exterieurLove">Point de vue extérieur</div>
+        <div class="option-small" data-value="jeLove">Point de vue d'un partenaire ("J'ai rencontré Paul en 2020")</div>
+        <div class="option-small" data-value="exterieurLove">Point de vue extérieur ("Anne et Jean se sont mariés en 2023")</div>
       </div>
     </div>
 
@@ -382,4 +368,3 @@ btnStart.addEventListener('click', () => {
 setupLovePrenoms();
 setupHommagePrenom();
 </script>
-
