--- a/doctype.html
+++ b/doctype.html
@@ -166,7 +166,7 @@
         <div class="option" data-value="bio">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Image%20encart%20interview.png" alt="Biographie">
           <div class="option-title">Biographie</div>
-          <div class="option-desc">Créez votre biographie :<br>• Votre histoire<br>• L'histoire d'un proche<br>• Aidez un proche pour son histoire</div>
+          <div class="option-desc">Créez votre biographie :<br>• Votre histoire<br>• L'histoire d'un proche<br>• Partagez le moment</div>
         </div>
         <div class="option" data-value="love">
           <img src="https://raw.githubusercontent.com/Manupri974/lifebook-V2.1/refs/heads/main/assets/Sans%20titre%20(800%20x%20480%20px).png" alt="Histoire d'amour">
